--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <title>Авторизация</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-        <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-        <link rel="stylesheet" href="style/main.css">
-    </head>
+<head>
+    <title>Авторизация</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <body>
-        <div>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
-        </div>
-        <script src="./script/app.js"></script>
-    </body>
 
+    <link rel="stylesheet" href="style/main.css">
+</head>
+
+<body>
+<div class="conteiner">
+
+</div>
+<script src="./script/app.js"></script>
+</body>
 </html>
