--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
 <head>
     <title>Авторизация</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
@@ -19,6 +18,7 @@
 <div class="conteiner">
 
 </div>
+<div id="map"></div>
 <script src="./script/app.js"></script>
 </body>
 </html>
