--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
 <head>
     <title>Авторизация</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
+    <script src="https://api-maps.yandex.ru/2.1/?lang=en_RU" type="text/javascript"></script>
 
     <link rel="stylesheet" href="style/main.css">
 </head>
@@ -18,6 +18,7 @@
 <div class="conteiner">
 
 </div>
+
 <script src="./script/app.js"></script>
 </body>
 </html>
