--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,12 @@
         <div class="conteiner">
 
         </div>
+        <audio id="audio">
+            <source src="sound.mp3">
+        </audio>
 
         <script src="./script/app.js"></script>
+
     </body>
 
 </html>
