udate class slackAPI

--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,19 @@
     <div class="conteiner">
 
     </div>
-    <audio id="audio">
+    <!-- <audio id="audio">
         <source src="sound.mp3">
-    </audio>
+    </audio> -->
 
 
     <script type="html/template" id="mainChat">
         //= templates/mainChat.html
+    </script>
+    <script type="html/template" id="myMsg">
+        //= templates/myMsg.html
+    </script>
+    <script type="html/template" id="opponentMsg">
+        //= templates/opponentMsg.html
     </script>
 
     <script src="./script/app.js"></script>
