update class slackAPI

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,9 @@
     <script type="html/template" id="opponentMsg">
         //= templates/opponentMsg.html
     </script>
+    <script type="html/template" id="contacts">
+        //= templates/contacts.html
+    </script>
 
     <script src="./script/app.js"></script>
 
