--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,9 @@
     <div class="conteiner">
 
     </div>
-    <!-- <audio id="audio">
+    <audio id="audio">
         <source src="sound.mp3">
-    </audio> -->
+    </audio>
 
 
     <script type="html/template" id="mainChat">
