--- a/src/index.html
+++ b/src/index.html
@@ -56,11 +56,21 @@
         </div>
     </script>
     <script type="html/template" id="contacts">
-        //= templates/contacts.html
+        <span class="mdl-chip mdl-chip--contact mdl-chip--deletable user_${userId} userName_${userName}">
+            <img class="mdl-chip__contact user_${userId} userName_${userName}" src="${img}">
+            <span class="mdl-chip__text user_${userId} userName_${userName}">${userName}</span>
+        </span>
     </script>
-
+    <script type="html/template" id="channelsList">
+        <span class="mdl-chip mdl-chip--contact mdl-chip--deletable channel_${channelId} channelName_${channelName}">
+            <img class="mdl-chip__contact channel_${channelId} channelName_${channelName}" src="./img/group.png">
+            <span class="mdl-chip__text channel_${channelId} channelName_${channelName}">${channelName}</span>
+        <button type="button" class="mdl-chip__action">
+            <i class="material-icons myCross channel_${channelId}" id="removeChannel">cancel</i>
+        </button>
+        </span>
+    </script>
     <script src="./script/app.js"></script>
-
 </body>
 
 </html>
